test/mutation_analysis/s0128_longest_consecutive_sequence/hafis/starchat/mutants/9/result.txt
./test/mutation_analysis/s0128_longest_consecutive_sequence/hafis/starchat/mutants/9/Solution.java:26: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
